Early draft for 4 May

--- a/2024/2024-05-04.md
+++ b/2024/2024-05-04.md
@@ -1,79 +1,61 @@
-# The big winner from a TikTok ban in America
-## Hint: It will probably be a certain other social company you don't like.
-![Mark Zuckerberg](https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Mark_Zuckerberg_F8_2018_Keynote.jpg/2560px-Mark_Zuckerberg_F8_2018_Keynote.jpg)
-*Meta founder Mark Zuckerberg speaking at a 2018 developers' conference. Photo by Anthony Quintano via Wikimedia Commons*
-
-<!--
-
-Lede item. Should run ~450 words. Riff on social networking. TikTok bill will likely empower Meta. Segue to topic of open social protocols.
-
-Some notable links:
-
-- TikTok bill passed. https://twitter.com/jacobhelberg/status/1783159895069528260
-
-- Galloway post calling Meta management "mendacious fucks": https://www.profgalloway.com/the-netflix-effect/
-
--->
-
-
-# tktktk
-## tktktktk
+# The fastest hunk of junk in the galaxy
+## For May 4th, here's my recommended order for watching the live-action Star Wars films.
 
 ![Zane Witherspoon and Denis Molchanenko of Dispatch Labs](https://miro.medium.com/v2/resize:fit:1400/format:webp/1*ehPvBgHMiT5bgqffsDPgAw.jpeg)
-*Zane Witherspoon and Denis Molchanenko of Dispatch Labs preparing for public launch of the company's blockchain "mainnet" on Dec. 3, 2018.*
+*Zane Wit=herspoon and Denis Molchanenko of Dispatch Labs preparing for public launch of the company's blockchain "mainnet" on Dec. 3, 2018.*
 
 <!--
 
-Lede item. Should run ~450 words. Lay out your theory of the 4-part crypto market and why it matters.
+Lede item. Should run ~450 words. Some possibilities...
+
+Leading candidate right now is a STARWARS riff, for May 4th...
+
+- Skip I and II
+- Watch III in Spanish
+- Solo
+- Rogue One
+- Episodes IV-VI
+- Force Awakens? Maybe.
+- Episode VIII and IX
+
+- PROPERORDER: The Phantom Menace still sucks. A rant. Skip Episodes I and II entirely.
 
 - OPENSOCIAL: Roundup of open standards. Shout out Our biggest fight folks.
+
+     Some relevant links:
+
+     ActivityPub https://en.wikipedia.org/wiki/ActivityPub
+
+     https://uk.finance.yahoo.com/news/billionaire-frank-mccourt-got-divorced-100000144.html
+
+     https://www.aol.com/finance/big-tech-doesnt-billionaire-frank-110418265.html
+
+     https://dsnp.org/
+
+     https://github.com/LibertyDSNP
+
+     https://vimeo.com/showcase/dsnp-public-spec-meeting
+
+     https://nostr.com/
+
+     https://mirror.xyz/about
+
+
 - 4PART: The four-part market and why it matters.
--
 
-Is this crypto stuff going to last?
+       Some string...
 
-Short answer: Yes.
+        Is this crypto stuff going to last?
 
-Longer answer: The first three parts mentioned above will certainly last. Bitcoin and Ethereum have reached such a scale that they certainly are going to last. So will stablecoins as a category, although there may be winners and losers along the way. In other words, I can't necessarily tell you that the exact stablecoins that are widely used today will be the same ones in wide use 10 years from now. But there will certainly be *something* along those lines still in use.
+        Short answer: Yes.
 
-The fourth part -- "everything else" -- contains a mix of stuff that will last and stuff that won't.
+        Longer answer: The first three parts mentioned above will certainly last. Bitcoin and Ethereum have reached such a scale that they certainly are going to last. So will stablecoins as a category, although there may be winners and losers along the way. In other words, I can't necessarily tell you that the exact stablecoins that are widely used today will be the same ones in wide use 10 years from now. But there will certainly be *something* along those lines still in use.
 
-OK. But where do I even start?
+        The fourth part -- "everything else" -- contains a mix of stuff that will last and stuff that won't.
 
-Read up on the first three categories, gain a thorough understanding, and invest where you believe there is the most value. As for the fourth category, you can safely ignore it as a newbie.
+        OK. But where do I even start?
 
-
-
-
-
-
-
-
-
-
-
-
-Leaning toward a roundup of open social protocols. Some relevant links:
-
-ActivityPub https://en.wikipedia.org/wiki/ActivityPub
-
-https://uk.finance.yahoo.com/news/billionaire-frank-mccourt-got-divorced-100000144.html
-
-https://www.aol.com/finance/big-tech-doesnt-billionaire-frank-110418265.html
-
-https://dsnp.org/
-
-https://github.com/LibertyDSNP
-
-https://vimeo.com/showcase/dsnp-public-spec-meeting
-
-https://nostr.com/
-
-https://mirror.xyz/about
-
-
-
-A few alternative and (mostly) evergreen possibilities below. Remember to clean up WIPlist in Notion, store ideas here for the newsletter as you go...
+        Read up on the first three categories, gain a thorough understanding, and invest where you believe there is the most value. As for the fourth category, you can safely ignore it as a newbie.
 
 - MLBAI: Yes, MLB could provide examples of AI's applications -- and how they might affect other sorts of workplaces. But MLB is also already providing great examples of how data can be abused. Why is OBP down? Why are pitchers' arms falling apart? How do you judge relevance of a particular piece of data to the mission of an organization and the day-to-day execution of it? Riff on WaPo article at https://www.washingtonpost.com/opinions/2024/04/10/op-moneyballai/
 
@@ -83,41 +65,29 @@ A few alternative and (mostly) evergreen possibilities below. Remember to clean 
 
 -->
 
-### Week in Review: April 14-20, 2024
+### Week in Review: April 28 to May 4, 2024
+
 
 <!-- Prompt: Leo, please summarize the news article in this browser tab. I'm looking for a paragraph of 2-3 conversational sentences, suitable to use in a newsletter I'm working on. -->
 
-- Bitcoin Runes are boosting network fees through the roof. <!-- Need link -->
+- Bitcoin is on track for its worst month since FTX meltdown, according to Bloomberg. <!-- Check month-end tally, links to coverage on Friday. -->
 
-- NYSE considering 24-hour trading day. <!-- Need link. -->
+- CZ sentencing. <!-- Need update. Find link -->
 
-- New SBF settlement with investors. <!-- Need link -->
+- New crypto ETFs in Hong Kong, Australia. <!-- Find links -->
 
-- TikTok bill passed. https://twitter.com/jacobhelberg/status/1783159895069528260
-
-- CZ sentencing. <!-- New link -->
-
-- https://www.washingtonpost.com/opinions/2024/04/24/ignoble-house-republicans-against-ukraine-aid/
 
 <!-- Some leftovers. These are unlikely candidates, but just some articles worth reading... -->
 
 - https://www.citationneeded.news/ai-isnt-useless/
 
-https://financebuzz.com/supplement-income-yaez?adgroupid=45257510&adid=1743497623825240223
+- https://financebuzz.com/supplement-income-yaez?adgroupid=45257510&adid=1743497623825240223
 
-https://www.coindesk.com/consensus-magazine/2024/04/16/what-the-history-of-linux-says-about-the-long-road-to-decentralized-storage-adoption/
+- https://www.coindesk.com/consensus-magazine/2024/04/16/what-the-history-of-linux-says-about-the-long-road-to-decentralized-storage-adoption/
 
-https://www.washingtonpost.com/business/2024/04/09/tax-day-deadline-extension-refund/
+- https://www.wsj.com/articles/irs-tax-collectors-audit-middle-class-tigta-5071d622#cxrecs_s
 
-https://www.wsj.com/world/india/american-investors-embrace-a-less-democratic-india-a8e60874
-
-https://www.wsj.com/articles/irs-tax-collectors-audit-middle-class-tigta-5071d622#cxrecs_s
-
-https://www.wsj.com/finance/commodities-futures/commodities-rally-reflects-a-better-economy-but-also-poses-inflation-risks-1e81e723
-
-https://www.wsj.com/health/wellness/dementia-prevention-middle-age-brain-14d713a3
-
-- https://www.washingtonpost.com/world/2024/04/05/haiti-gangs-american-guns/
+- https://www.wsj.com/health/wellness/dementia-prevention-middle-age-brain-14d713a3
 
 - https://slate.com/business/2024/03/supporting-parents-financially-generational-wealth.html
 
@@ -133,15 +103,13 @@ https://www.wsj.com/health/wellness/dementia-prevention-middle-age-brain-14d713a
 
 - https://www.nasdaq.com/articles/why-blockchain-technology-is-the-future-of-supply-chain-and-vendor-management
 
-- NYT on inflation: https://www.nytimes.com/2024/04/26/business/inflation-money-dollar-value.html | https://www.nytimes.com/2024/04/25/opinion/us-federal-debt.html | https://www.wsj.com/economy/central-banking/trump-allies-federal-reserve-independence-54423c2f?reflink=desktopwebshare_permalinks
-
-- https://www.wsj.com/tech/personal-tech/schools-want-to-ban-phones-parents-say-no-62889fe0?reflink=desktopwebshare_permalink
-
 ### Odds & Ends
 
-- https://www.washingtonpost.com/home/2024/04/26/advice-squirrels-stop-chewing-furniture/
+- **You don't say!** ICYMI, a headline that actually ran on the New York Times website April 26: ["With Inflation This High, Nobody Knows What a Dollar Is Worth"](https://www.nytimes.com/2024/04/26/business/inflation-money-dollar-value.html)
 
-- **Why can an iPhone survive a drop** from a plane but not from your kitchen counter? Though some creative use of drones, the Wall Street Journal [investigates](https://www.wsj.com/tech/personal-tech/why-an-iphone-can-survive-a-drop-from-a-plane-but-not-from-your-kitchen-counter-57453ca9?reflink=desktopwebshare_permalink).
+- **Why can an iPhone survive a drop** from a plane but not from your kitchen counter? Through some creative use of drones, The Wall Street Journal [investigates](https://www.wsj.com/tech/personal-tech/why-an-iphone-can-survive-a-drop-from-a-plane-but-not-from-your-kitchen-counter-57453ca9?reflink=desktopwebshare_permalink).
+
+- **Why?** https://fandomwire.com/thats-not-a-good-film-25-years-later-star-wars-fans-still-wont-vouch-for-the-phantom-menace-despite-upcoming-theatrical-re-release/
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
