Updating drafts for 4 and 11 May

--- a/2024/2024-05-04.md
+++ b/2024/2024-05-04.md
@@ -1,74 +1,12 @@
 # The fastest hunk of junk in the galaxy
 ## For May 4th, here's my recommended order for watching the live-action Star Wars films.
 
-![Zane Witherspoon and Denis Molchanenko of Dispatch Labs](https://miro.medium.com/v2/resize:fit:1400/format:webp/1*ehPvBgHMiT5bgqffsDPgAw.jpeg)
-*Zane Wit=herspoon and Denis Molchanenko of Dispatch Labs preparing for public launch of the company's blockchain "mainnet" on Dec. 3, 2018.*
+![Star Wars Lego figures crossing a street Beatles-style.](https://images.unsplash.com/photo-1585366119957-e9730b6d0f60)
+*Photo by Daniel K. Cheung via Unsplash*
 
-<!--
-
-Lede item. Should run ~450 words. Some possibilities...
-
-Leading candidate right now is a STARWARS riff, for May 4th...
-
-- Skip I and II
-- Watch III in Spanish
-- Solo
-- Rogue One
-- Episodes IV-VI
-- Force Awakens? Maybe.
-- Episode VIII and IX
-
-- PROPERORDER: The Phantom Menace still sucks. A rant. Skip Episodes I and II entirely.
-
-- OPENSOCIAL: Roundup of open standards. Shout out Our biggest fight folks.
-
-     Some relevant links:
-
-     ActivityPub https://en.wikipedia.org/wiki/ActivityPub
-
-     https://uk.finance.yahoo.com/news/billionaire-frank-mccourt-got-divorced-100000144.html
-
-     https://www.aol.com/finance/big-tech-doesnt-billionaire-frank-110418265.html
-
-     https://dsnp.org/
-
-     https://github.com/LibertyDSNP
-
-     https://vimeo.com/showcase/dsnp-public-spec-meeting
-
-     https://nostr.com/
-
-     https://mirror.xyz/about
-
-
-- 4PART: The four-part market and why it matters.
-
-       Some string...
-
-        Is this crypto stuff going to last?
-
-        Short answer: Yes.
-
-        Longer answer: The first three parts mentioned above will certainly last. Bitcoin and Ethereum have reached such a scale that they certainly are going to last. So will stablecoins as a category, although there may be winners and losers along the way. In other words, I can't necessarily tell you that the exact stablecoins that are widely used today will be the same ones in wide use 10 years from now. But there will certainly be *something* along those lines still in use.
-
-        The fourth part -- "everything else" -- contains a mix of stuff that will last and stuff that won't.
-
-        OK. But where do I even start?
-
-        Read up on the first three categories, gain a thorough understanding, and invest where you believe there is the most value. As for the fourth category, you can safely ignore it as a newbie.
-
-- MLBAI: Yes, MLB could provide examples of AI's applications -- and how they might affect other sorts of workplaces. But MLB is also already providing great examples of how data can be abused. Why is OBP down? Why are pitchers' arms falling apart? How do you judge relevance of a particular piece of data to the mission of an organization and the day-to-day execution of it? Riff on WaPo article at https://www.washingtonpost.com/opinions/2024/04/10/op-moneyballai/
-
-- AISIGNIN: One of the most boring aspects of this new technology is really one of the most important.
-
-- HOMEBIAS: Does it exist in tech, as in the stock market?
-
--->
+<!-- Lede item. Pickup from personal blog. -->
 
 ### Week in Review: April 28 to May 4, 2024
-
-
-<!-- Prompt: Leo, please summarize the news article in this browser tab. I'm looking for a paragraph of 2-3 conversational sentences, suitable to use in a newsletter I'm working on. -->
 
 - Bitcoin is on track for its worst month since FTX meltdown, according to Bloomberg. <!-- Check month-end tally, links to coverage on Friday. -->
 
