Edits to news summary items

--- a/2024/2024-05-04.md
+++ b/2024/2024-05-04.md
@@ -2,9 +2,13 @@
 ## For May 4th, here's my recommended order for watching the live-action Star Wars films.
 
 ![Star Wars Lego figures crossing a street Beatles-style.](https://images.unsplash.com/photo-1585366119957-e9730b6d0f60)
-*Photo by Daniel K. Cheung via Unsplash*
+*Photo by Daniel K Cheung via Unsplash*
 
-<!-- Lede item. Pickup from personal blog. -->
+<!-- Lede item. Pickup from personal blog.
+
+Story linking to some nasty tweets about Phantom Menace re-release: https://fandomwire.com/thats-not-a-good-film-25-years-later-star-wars-fans-still-wont-vouch-for-the-phantom-menace-despite-upcoming-theatrical-re-release/
+
+-->
 
 ### Week in Review: April 28 to May 4, 2024
 
@@ -14,40 +18,17 @@
 
 - New crypto ETFs in Hong Kong, Australia. <!-- Find links -->
 
+- tk
 
-<!-- Some leftovers. These are unlikely candidates, but just some articles worth reading... -->
+- tk
 
-- https://www.citationneeded.news/ai-isnt-useless/
-
-- https://financebuzz.com/supplement-income-yaez?adgroupid=45257510&adid=1743497623825240223
-
-- https://www.coindesk.com/consensus-magazine/2024/04/16/what-the-history-of-linux-says-about-the-long-road-to-decentralized-storage-adoption/
-
-- https://www.wsj.com/articles/irs-tax-collectors-audit-middle-class-tigta-5071d622#cxrecs_s
-
-- https://www.wsj.com/health/wellness/dementia-prevention-middle-age-brain-14d713a3
-
-- https://slate.com/business/2024/03/supporting-parents-financially-generational-wealth.html
-
-- https://bettermarketing.pub/youre-wasting-your-time-posting-daily-on-linkedin-6c7b1337bcdf
-
-- https://stanfordbinettest.com/
-
-- https://www.vogue.com/article/joan-didion-self-respect-essay-1961
-
-- https://www.wsj.com/business/media/paramount-faces-a-mountain-of-distrust-16502584
-
-- https://slate.com/human-interest/2024/03/insomnia-cures-drug-free-sleeplessness-lewis-carroll-book.html
-
-- https://www.nasdaq.com/articles/why-blockchain-technology-is-the-future-of-supply-chain-and-vendor-management
+- tk
 
 ### Odds & Ends
 
 - **You don't say!** ICYMI, a headline that actually ran on the New York Times website April 26: ["With Inflation This High, Nobody Knows What a Dollar Is Worth"](https://www.nytimes.com/2024/04/26/business/inflation-money-dollar-value.html)
 
 - **Why can an iPhone survive a drop** from a plane but not from your kitchen counter? Through some creative use of drones, The Wall Street Journal [investigates](https://www.wsj.com/tech/personal-tech/why-an-iphone-can-survive-a-drop-from-a-plane-but-not-from-your-kitchen-counter-57453ca9?reflink=desktopwebshare_permalink).
-
-- **Why?** https://fandomwire.com/thats-not-a-good-film-25-years-later-star-wars-fans-still-wont-vouch-for-the-phantom-menace-despite-upcoming-theatrical-re-release/
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
