Fixing filenames, etc.

--- a/2024/2024-05-05.md
+++ b/2024/2024-05-05.md
@@ -1,7 +1,7 @@
 # The fastest hunk of junk in the galaxy
 ## For May 4th, here's my recommended order for watching the live-action Star Wars films.
 
-![Star Wars Lego figures crossing a street Beatles-style.](https://images.unsplash.com/photo-1585366119957-e9730b6d0f60)
+![Star Wars Lego figures crossing a street Beatles-style.](https://blog.pmckay.com/img/daniel-k-cheung-3840.jpg)
 *Photo by Daniel K Cheung via Unsplash*
 
 <!-- Lede item. Pickup from personal blog.
@@ -14,9 +14,9 @@ Story linking to some nasty tweets about Phantom Menace re-release: https://fand
 
 - Bitcoin is on track for its worst month since FTX meltdown, according to Bloomberg. <!-- Check month-end tally, links to coverage on Friday. -->
 
-- CZ sentencing. <!-- Need update. Find link -->
-
 - New crypto ETFs in Hong Kong, Australia. <!-- Find links -->
+
+- CZ sentencing. <!-- Need update. Find link --> | Roger Ver indictment. <!-- Need link -->
 
 - tk
 
