fleshing out lede item

--- a/2024/2024-05-05.md
+++ b/2024/2024-05-05.md
@@ -1,4 +1,4 @@
-# The fastest hunk of junk in the galaxy
+# The fastest hunk o' junk in the galaxy
 ## For May 4th, here's my recommended order for watching the live-action Star Wars films.
 
 ![Star Wars Lego figures crossing a street Beatles-style.](https://blog.pmckay.com/img/daniel-k-cheung-3840.jpg)
@@ -9,6 +9,49 @@
 Story linking to some nasty tweets about Phantom Menace re-release: https://fandomwire.com/thats-not-a-good-film-25-years-later-star-wars-fans-still-wont-vouch-for-the-phantom-menace-despite-upcoming-theatrical-re-release/
 
 -->
+
+**In honor of Star Wars Day this May 4th,** I'd like to weigh in on a long-running debate that confounds newbies to the franchise and destroys friendships among the [Coruscant](https://editorial.rottentomatoes.com/guide/star-wars-movies-in-order/) cognoscenti.
+
+What is the best order in which to watch the Star Wars movies?
+
+Conventionally, there are two schools of thought: Either watch them in order of real-life release starting with 1977's Episode IV: A New Hope, or watch them in order of the fictional narrative, which is a quite radically different experience.
+
+In my own recommended order, listed below, you'll see I lean toward the latter approach. However, as a certain space pirate [might say](https://www.youtube.com/watch?v=i1WkXxWoGiI), I've made a lot of special modifications myself to the narrative order approach.
+
+My tweaks will have the net effect of shortening your viewing time, but that's not really my point. Below is the ordering that I think truly highlights the best aspects of the Star Wars franchise, will allow newcomers to understand why it's so beloved by existing fans, and at the same time acknowledges the sprawling, uneven nature of the space beast in question.
+
+After all, we are talking here about 11 live-action movies comprising TKTKT total hours of runtime. (I'm excluding television, streaming, and animated Star Wars content for our purposes.) Those films include some of the best sci-fi releases ever made and, frankly, a few that are pure [bantha](https://starwars.fandom.com/wiki/Bantha) fodder.
+
+
+
+
+<!-- Spoiler alert -->
+
+https://www.usatoday.com/story/entertainment/movies/2023/05/04/star-wars-day-may-the-4th-history/70179125007/
+
+A series of steps:
+
+- **Skip Episodes I and II entirely.** Light saber fights. You can find them on YouTube here, here, and here.
+
+- **Watch Episode III -- in Spanish.** respiratory patient.
+
+- **Watch Solo.**
+
+- **Watch Andor.**
+
+- **Watch Rogue One.**
+
+- **Watch Episodes IV to VI in order of release.** Everything beyond this is optional.
+
+- **If you really, really, really feel like you need an epilogue to the story, and if you don't mind delving into a serial TV series, watch the first two seasons of the Mandalorian.**
+
+- **If you really, really, really feel like you need an epilogue to *that* story, or if you want an epilogue but weren't willing to commit to a TV series, watch Episode VII.** As with the prequels, I'm sure there are Gen Z or even younger Gen Alpha fans who will someday defend this as the "best Star Wars" because they experienced it as children.
+
+- **If you TKTKTK, watch Episode VIII.**
+
+- **If you TKTKTK, watch Episode IX.** For me, this one is in a similar category as the first two episodes -- essentially unwatchable.
+
+Kicker... New trilogy in the works.
 
 ### Week in Review: April 28 to May 4, 2024
 
